add apache-commons-text